script/kind-session-persistence/tests/gateway-traefikservice-route-sticky/backend-a-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-tsr-a
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami-tsr-a
  template:
    metadata:
      labels:
        app: whoami-tsr-a
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - containerPort: 80
