script/kind-session-persistence/tests/gateway-traefikservice-route-sticky/httproute-header.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gw-tsr-header
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
  hostnames:
    - whoami-tsr-header.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tsr-multi-header
          kind: TraefikService
          group: traefik.io
          port: 80
      sessionPersistence:
        sessionName: X-Route-Sticky
        type: Header
