script/kind-session-persistence/tests/gateway-traefikservice-route-sticky/traefikservice-header.yaml
---
apiVersion: traefik.io/v1alpha1
kind: TraefikService
metadata:
  name: tsr-multi-header
  namespace: default
spec:
  weighted:
    sticky:
      header:
        name: X-TSR-WRR
    services:
      - name: whoami-tsr-a-header
        port: 80
        sticky:
          header:
            name: X-TSR-SVC
      - name: whoami-tsr-b-header
        port: 80
        sticky:
          header:
            name: X-TSR-SVC
